# spider

./: README.md  UMLspider.dia  protocol.rtf
client/: ConsoleApplication7.sln
client/ConsoleApplication7/: Client.cpp  Client.h  ConsoleApplication7.cpp  ConsoleApplication7.vcxproj  ConsoleApplication7.vcxproj.filters  Hooker.cpp  Hooker.h  Sender.cpp  Sender.h  WindowsSocket.cpp  WindowsSocket.h
client/ConsoleApplication7/Debug/ConsoleA.F0070643.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication7.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
client/Debug/: cert.pem  mine.pem
server/: CMakeLists.txt  Cmd.cpp  Cmd.hpp  INetwork.hpp  Logger.cpp  Logger.hpp  Parser.cpp  Parser.hpp  Plugins.cpp  Plugins.hpp  Server.cpp  Server.hpp  SocketIO.cpp  SocketIO.hpp  database.cpp  main.cpp  server
server/Keys/: dh2048.pem  server.crt  server.csr  server.key
server/Plugins/: IPlugin.hpp  doc-en.html  doc-fr.html
server/Plugins/Mongo/: Makefile  Mongo.cpp  Mongo.hpp
